<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresarActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/ingresarContacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextingresarNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:drawableLeft="@drawable/ic_contact_phone_black_24dp"
        android:ems="10"
        android:hint="@string/ingresarNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextingresarTelefono"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:ems="10"
        android:hint="@string/ingresarTelefono"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextingresarNombre" />

    <Button
        android:id="@+id/buttonAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/BotonAceptar"
        android:onClick="Aceptar"
        android:text="@string/BotonAceptar"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextingresarTelefono" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:hint="@string/BotonCancelar"
        android:onClick="cancelar"
        android:text="@string/BotonCancelar"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonAceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAceptar" />
</androidx.constraintlayout.widget.ConstraintLayout>